--- a/gb/19/8/22/n11470455.md
+++ b/gb/19/8/22/n11470455.md
@@ -1,54 +1,58 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>°×Â¹Ì¨·ç¿ìÅÜ ×î¿ìÏÂÎç·¢Â½¾¯</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/08/1fb7d8d63cdc3cab1bac05f1033b9f10-600x400.jpg" />
-<h6>µÚ11ºÅÌ¨·ç¡°°×Â¹¡±Õý¿ìËÙ³¯Ì¨Íå¿¿½ü£¬ÖÐÑëÆøÏó¾ÖÔ¤¹À£¬×î¿ì23ÈÕÒ»Ôç¾Í»á·¢²¼º£ÉÏÌ¨·ç¾¯±¨£¬²¢»áÔÚÏÂ°ëÌì·¢²¼Â½ÉÏÌ¨·ç¾¯±¨¡££¨ÖÐÑëÆøÏó¾ÖÌá¹©£©
-</h6>
-<hr>
-<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ22ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÀµçäÈãÌ¨ÍåÌ¨±±±¨µ¼£©µÚ11ºÅ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E.md">Ì¨·ç</a>¡°°×Â¹¡±Õý¿ìËÙ³¯Ì¨Íå¿¿½ü£¬<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%AE%E6%B0%94%E8%B1%A1%E5%B1%80.md">ÖÐÑëÆøÏó¾Ö</a>Ô¤¹À£¬Ì¨·çµÇÂ½»¨¶«¸ÅÂÊ×î¸ß£¬µ«Ò²²»ÅÅ³ý´ÓÌ¨ÍåÄÏ¶Ë½üº£»ò°ÍÊ¿º£Ï¿Í¨¹ý£¬×î¿ìÖÜÎå(23ÈÕ)Ò»Ôç¾Í»á·¢²¼º£ÉÏÌ¨·ç¾¯±¨£¬²¢»áÔÚÏÂ°ëÌì·¢²¼Â½ÉÏÌ¨·ç¾¯±¨£¬ÖÜÁù£¨24ÈÕ£©Ó°ÏìÌ¨Íå×îÃ÷ÏÔ¡£</p>
-<p>ÆøÏó¾Ö±íÊ¾£¬ÔÚÖÜËÄ£¨22ÈÕ£©14Ê±£¬°×Â¹<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E.md">Ì¨·ç</a>¾àÀëÌ¨Íå¶ìöÇ±Ç¶«ÄÏ¶«·½1050¹«Àïº£ÃæÉÏ£¬ÒÔÊ±ËÙ22¹«Àï³¯Î÷±±·½ÏòÇ°½ø£¬½üÖÐÐÄ×î´ó·çËÙÎªÃ¿Ãë20¹«³ß£¬Æß¼¶±©·çÈ¦°ë¾¶Îª100¹«Àï£¬µ«ÈÔÓÐÔöÇ¿»ú»á£¬Ô¤¹À½«ÒÔÇáÌ¨ÉÏÏÞ½Ó½üÌ¨Íå¡£</p>
-<p><a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%AE%E6%B0%94%E8%B1%A1%E5%B1%80.md">ÖÐÑëÆøÏó¾Ö</a>Ô¤±¨Ô±ÁõÅæëø±íÊ¾£¬ÖÜÎå(23ÈÕ)Ëæ×ÅÌ¨·çÍâÎ§»·Á÷Öð½¥½Ó½ü£¬Î÷°ë²¿µØÇø½«³öÏÖ³Á½µ×÷ÓÃ£¬ÔÚÐÂÖñ¡¢ÃçÀõ¡¢»¨¶«×Ý¹È½«³öÏÖ³¬¹ý36¶ÈÒÔÉÏ¸ßÎÂ³öÏÖ£¬ÖÜÎåÏÂ°ëÌì£¬¶«°ë²¿¡¢ÄÏ²¿µØÇøÔ½ÍíÓêÊÆÔ½Ã÷ÏÔ£¬ÖÜÁù£¨24ÈÕ£©Ó°ÏìÌ¨Íå×îÃ÷ÏÔ£¬È«Ì¨¶¼ÐëÑÏ·À¾Ö²¿´óÓê»òºÀÓê³öÏÖ¡£</p>
-<p>ÁõÅæëø±íÊ¾£¬´Ó¸÷¹úÔ¤±¨Êý¾Ý·ÖÎö£¬Ì¨·çÏ®Ì¨¸ÅÂÊ¼«¸ß£¬Ô¤¹ÀÔÚÖÜÁù£¨24ÈÕ£©°×ÌìµÇÂ½¶«°ë²¿µØÇø£¬µ«Ä¿Ç°Ì«Æ½Ñó¸ßÑ¹µÄ²»È·¶¨ÐÔ¸ß£¬Ì¨·ç¶¯ÏòÈÔÐë³ÖÐø¹Û²ì¡£</p>
-<p>ÌìÆøÖ°ÈËÎâÊ¥Óî±íÊ¾£¬°×Â¹Ì¨·çÉú³Éºó£¬¾Í³ÊÏÖ½á¹¹²»¶Ô³ÆµÄÇéÐÎ£¬Î÷ÄÏ²àÉî¶ÔÁ÷·¢Õ¹ÍúÊ¢£¬¶«±±²à¶ÔÁ÷·¢Õ¹Ïà¶Ô½ÏÈõ£¬ÕûÌå»·Á÷ÖÐÐÄÍâÂ¶ÔÚ¶ÔÁ÷ÔÆÍÅÖ®Íâ£¬µ¼ÖÂËü·¢Õ¹½ÏÎª»ºÂý£¬ÐèÒªÊ±¼ä½øÐÐ½á¹¹µÄÖØÕû£¬Í¬Ê±Ò²»áÓ°ÏìËüµÄÒÆ¶¯Â·¾¶£¬ÊÜ°×Â¹Ì¨·çµÄ²»¶Ô³Æ½á¹¹Ó°Ïì£¬ÄÏ²à·çÓêÓ¦±È±±²à¸üÃ÷ÏÔ£¬·¶Î§Ò²¸ü´ó¡£</p>
-<p>ÎâÊ¥Óî±íÊ¾£¬´ÓÌ¨·çÂ·¾¶ÉÏÀ´Ëµ£¬Ä¿Ç°´ó¶àÊýÖ÷¹ÛÂ·¾¶Ô¤±¨£¬ÈÔÇ÷ÏòÄÏ»¨Á«µ½Ì¨¶«Ò»´øµÇÂ½»ú»á×î´ó£¬ËäÈ»¹ýÈ¥Â·¾¶Æ«Î÷£¬µ«Ô¤¹ÀÕûÌå¸ßÑ¹Ê»Á÷ÅäÖÃÈÔ»á½«Ëüµ¼»ØÎ÷±±ÒÆ¶¯£¬ÉõÖÁ¿ÉÄÜ»¹»áÉÔÎªÆ«±±Ò»Ð©£¬´ó·½ÏòÇ÷ÏòÌ¨Íå¶«ÄÏ²¿ÎªÖ÷¡£µ«Ì¨·çÕûÌå½á¹¹²»¶Ô³Æ£¬ËùÒÔÂ·¾¶»¹ÓÐµ÷ÕûµÄ¿ÉÄÜÐÔ£¬Ò»µãµãµÄ±ä»¯¾Í¿ÉÄÜÔì³É²»Í¬µÄÓ°Ïì½á¹û£¬ÖµµÃ³ÖÐø¹Û²ì¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£ºÓñÕä</p>
-<hr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/oqudue369/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/oqudue369/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/oqudue369/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/oqudue369/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/oqudue369/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/oqudue369/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ç™½é¹¿å°é£Žå¿«è·‘ æœ€å¿«ä¸‹åˆå‘é™†è­¦</h2>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/22/n11470455.htm">°×Â¹Ì¨·ç¿ìÅÜ ×î¿ìÏÂÎç·¢Â½¾¯</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11468202.htm">Çá¶ÈÌ¨·ç°×Â¹ÕýÊ½Éú³É Ô¤¼ÆÖÜÎåÖÁÖÜÈÕÓ°ÏìÌ¨Íå</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11467110.htm">×¼Ì¨·ç¡°°×Â¹¡±¿ÖÇÖÌ¨£¿ ½ñÃ÷Á½Ìì×î¹Ø¼ü</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11467229.htm">ÖÐÔ­´óÑ§ÖúË÷ÂÞÃÅ½¨ÖÃÆøÏóÏµÍ³  Î¬Ïµ°î½»¾¡Á¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/28/n11414795.htm">Ì¨ÆøÏó×¨¼Ò£ºÌ¨·çºÃ·¢ÆÚ½«ÖÁ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/25/n11408763.htm">ÂõÈë8ÔÂ·Ý Ì¨ÆøÏó×¨¼Ò£º½«½øÈëÌ¨·çÍú¼¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11400092.htm">Êî¼ÙÌ¨·ç±¬·¢ÆÚ  Ì¨×¨¼ÒÔ¤²âÎ´À´10ÌìÆ½¾²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/28/n11352469.htm">Ì¨ÖÐÑëÆøÏó¾Ö:Ê¥Ó¤ÄêÓ°Ïì Ç¿Ì¨ÐÎ³É¸ÅÂÊ¸ß</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/28/n11351668.htm">Ì¨·ç¼¾À´ÁÙ ÆøÏó¾Ö£ºÇÖÌ¨Ì¨·çÔ¤¹À3µ½5¸ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/30/n11289639.htm">520±©Óê³µÔâÃð¶¥   24²¿³éË®»úÔÚË¯¾õ?</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/6/26/n9321650.htm">ÖÐÑëÆøÏó¾Ö»¶Çì76ÖÜÄê ÖÜÈýÆð¿ª·Å²Î¹Û5ÈÕ</a></li>
+<h6></h6>
+<hr>
+<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ22æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…èµ–çŽŸèŒ¹å°æ¹¾å°åŒ—æŠ¥å¯¼ï¼‰ç¬¬11å·<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E.md#1">å°é£Ž</a>â€œç™½é¹¿â€æ­£å¿«é€Ÿæœå°æ¹¾é è¿‘ï¼Œ<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%AE%E6%B0%94%E8%B1%A1%E5%B1%80.md#1">ä¸­å¤®æ°”è±¡å±€</a>é¢„ä¼°ï¼Œå°é£Žç™»é™†èŠ±ä¸œæ¦‚çŽ‡æœ€é«˜ï¼Œä½†ä¹Ÿä¸æŽ’é™¤ä»Žå°æ¹¾å—ç«¯è¿‘æµ·æˆ–å·´å£«æµ·å³¡é€šè¿‡ï¼Œæœ€å¿«å‘¨äº”(23æ—¥)ä¸€æ—©å°±ä¼šå‘å¸ƒæµ·ä¸Šå°é£Žè­¦æŠ¥ï¼Œå¹¶ä¼šåœ¨ä¸‹åŠå¤©å‘å¸ƒé™†ä¸Šå°é£Žè­¦æŠ¥ï¼Œå‘¨å…­ï¼ˆ24æ—¥ï¼‰å½±å“å°æ¹¾æœ€æ˜Žæ˜¾ã€‚</p>
+<p>æ°”è±¡å±€è¡¨ç¤ºï¼Œåœ¨å‘¨å››ï¼ˆ22æ—¥ï¼‰14æ—¶ï¼Œç™½é¹¿<ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E5%8F%B0%E9%A3%8E.md#1">å°é£Ž</a>è·ç¦»å°æ¹¾é¹…éŠ®é¼»ä¸œå—ä¸œæ–¹1050å…¬é‡Œæµ·é¢ä¸Šï¼Œä»¥æ—¶é€Ÿ22å…¬é‡Œæœè¥¿åŒ—æ–¹å‘å‰è¿›ï¼Œè¿‘ä¸­å¿ƒæœ€å¤§é£Žé€Ÿä¸ºæ¯ç§’20å…¬å°ºï¼Œä¸ƒçº§æš´é£ŽåœˆåŠå¾„ä¸º100å…¬é‡Œï¼Œä½†ä»æœ‰å¢žå¼ºæœºä¼šï¼Œé¢„ä¼°å°†ä»¥è½»å°ä¸Šé™æŽ¥è¿‘å°æ¹¾ã€‚</p>
+<p><ahref="https://github.com/oqudue369/djy/blob/master/gb/tag/%E4%B8%AD%E5%A4%AE%E6%B0%94%E8%B1%A1%E5%B1%80.md#1">ä¸­å¤®æ°”è±¡å±€</a>é¢„æŠ¥å‘˜åˆ˜æ²›æ»•è¡¨ç¤ºï¼Œå‘¨äº”(23æ—¥)éšç€å°é£Žå¤–å›´çŽ¯æµé€æ¸æŽ¥è¿‘ï¼Œè¥¿åŠéƒ¨åœ°åŒºå°†å‡ºçŽ°æ²‰é™ä½œç”¨ï¼Œåœ¨æ–°ç«¹ã€è‹—æ —ã€èŠ±ä¸œçºµè°·å°†å‡ºçŽ°è¶…è¿‡36åº¦ä»¥ä¸Šé«˜æ¸©å‡ºçŽ°ï¼Œå‘¨äº”ä¸‹åŠå¤©ï¼Œä¸œåŠéƒ¨ã€å—éƒ¨åœ°åŒºè¶Šæ™šé›¨åŠ¿è¶Šæ˜Žæ˜¾ï¼Œå‘¨å…­ï¼ˆ24æ—¥ï¼‰å½±å“å°æ¹¾æœ€æ˜Žæ˜¾ï¼Œå…¨å°éƒ½é¡»ä¸¥é˜²å±€éƒ¨å¤§é›¨æˆ–è±ªé›¨å‡ºçŽ°ã€‚</p>
+<p>åˆ˜æ²›æ»•è¡¨ç¤ºï¼Œä»Žå„å›½é¢„æŠ¥æ•°æ®åˆ†æžï¼Œå°é£Žè¢­å°æ¦‚çŽ‡æžé«˜ï¼Œé¢„ä¼°åœ¨å‘¨å…­ï¼ˆ24æ—¥ï¼‰ç™½å¤©ç™»é™†ä¸œåŠéƒ¨åœ°åŒºï¼Œä½†ç›®å‰å¤ªå¹³æ´‹é«˜åŽ‹çš„ä¸ç¡®å®šæ€§é«˜ï¼Œå°é£ŽåŠ¨å‘ä»é¡»æŒç»­è§‚å¯Ÿã€‚</p>
+<p>å¤©æ°”èŒäººå´åœ£å®‡è¡¨ç¤ºï¼Œç™½é¹¿å°é£Žç”ŸæˆåŽï¼Œå°±å‘ˆçŽ°ç»“æž„ä¸å¯¹ç§°çš„æƒ…å½¢ï¼Œè¥¿å—ä¾§æ·±å¯¹æµå‘å±•æ—ºç››ï¼Œä¸œåŒ—ä¾§å¯¹æµå‘å±•ç›¸å¯¹è¾ƒå¼±ï¼Œæ•´ä½“çŽ¯æµä¸­å¿ƒå¤–éœ²åœ¨å¯¹æµäº‘å›¢ä¹‹å¤–ï¼Œå¯¼è‡´å®ƒå‘å±•è¾ƒä¸ºç¼“æ…¢ï¼Œéœ€è¦æ—¶é—´è¿›è¡Œç»“æž„çš„é‡æ•´ï¼ŒåŒæ—¶ä¹Ÿä¼šå½±å“å®ƒçš„ç§»åŠ¨è·¯å¾„ï¼Œå—ç™½é¹¿å°é£Žçš„ä¸å¯¹ç§°ç»“æž„å½±å“ï¼Œå—ä¾§é£Žé›¨åº”æ¯”åŒ—ä¾§æ›´æ˜Žæ˜¾ï¼ŒèŒƒå›´ä¹Ÿæ›´å¤§ã€‚</p>
+<p>å´åœ£å®‡è¡¨ç¤ºï¼Œä»Žå°é£Žè·¯å¾„ä¸Šæ¥è¯´ï¼Œç›®å‰å¤§å¤šæ•°ä¸»è§‚è·¯å¾„é¢„æŠ¥ï¼Œä»è¶‹å‘å—èŠ±èŽ²åˆ°å°ä¸œä¸€å¸¦ç™»é™†æœºä¼šæœ€å¤§ï¼Œè™½ç„¶è¿‡åŽ»è·¯å¾„åè¥¿ï¼Œä½†é¢„ä¼°æ•´ä½“é«˜åŽ‹é©¶æµé…ç½®ä»ä¼šå°†å®ƒå¯¼å›žè¥¿åŒ—ç§»åŠ¨ï¼Œç”šè‡³å¯èƒ½è¿˜ä¼šç¨ä¸ºååŒ—ä¸€äº›ï¼Œå¤§æ–¹å‘è¶‹å‘å°æ¹¾ä¸œå—éƒ¨ä¸ºä¸»ã€‚ä½†å°é£Žæ•´ä½“ç»“æž„ä¸å¯¹ç§°ï¼Œæ‰€ä»¥è·¯å¾„è¿˜æœ‰è°ƒæ•´çš„å¯èƒ½æ€§ï¼Œä¸€ç‚¹ç‚¹çš„å˜åŒ–å°±å¯èƒ½é€ æˆä¸åŒçš„å½±å“ç»“æžœï¼Œå€¼å¾—æŒç»­è§‚å¯Ÿã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šçŽ‰ç</p>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11468811.htm">³ÉÁúÎªÖÐ¹²Õ¾Ì¨ÔâÐ¡ÑÝÔ±·Éõß ÍøÂçÒ»Æ¬¼¥·í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11468912.htm">´«¶àÂ×¶à·¨À­Àû³µ¶ÓÁìÍ·³µÖ÷ÊÇÊ¡³¤ÍâËï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11468820.htm">ÑëÊÓÉù³ÆÖÐÓ¢ÁªºÏÉùÃ÷¡°¹ýÊ±ÎÞÐ§¡±³ÉÐ¦±ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11466862.htm">¡¾·­Ç½±Ø¿´¡¿ÍÆÌØÁ³Êé½ô¼±ÐÐ¶¯ ±±¾©²»Ãî</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/5/23/n11274731.htm">¡¾ÏÍºó´«¡¿¿µÎõÇ××ÔÑ¡ÖÐµÄ¶ùÏ±</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453376.htm">Ãñ¹ú·çÁ÷ÈËÎï£ºÀîÊåÍ¬ÎªÊ²Ã´³ö¼Ò£¨ÉÏ£©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/16/n11458268.htm">Àî¼Î³Ï¹ã¸æ´Ê¡°»ÆÌ¨Ö®¹Ï¡±±³ºóµÄÀúÊ·¹ÊÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11465897.htm">¶Îì÷ÈðÍâËïÅ®£ºÍâ¹«Ã»ÓÐÏÂÁîÏòÑ§Éú¿ªÇ¹</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11468811.htm">³ÉÁúÎªÖÐ¹²Õ¾Ì¨ÔâÐ¡ÑÝÔ±·Éõß ÍøÂçÒ»Æ¬¼¥·í</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11466279.htm">ÁõÒà·Æ³Å¾¯ÒýÈ«ÇòµÖÖÆ ¡¶»¨Ä¾À¼¡·º£±¨Ôâ¶ñ¸ã</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11466267.htm">ºÎÔÏÊ«¸°ÃÀÑÝ½² ÐÐÇ°»ú³¡Ö±²¥»°ÖÔ³¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11465355.htm">²»ÂúÒþË½ÔâÖÜ¿¯¶ñÒâÆØ¹â ÁÖÖ¾Áá·¢ÉùÃ÷Ç´Ôð</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11464142.htm">ÁÖÖ£»¯×±Ê¦ìÅ¸»ÌôÐÆÊÐÃñ Ô¬ÃÖÃ÷·íÆä²ä³Ô²äºÈ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/19/n11462772.htm">¡¾ÃÀÊ³ÌìÌÃ¡¿ÂéÆÅ¶¹¸¯µÄ¼Ò³£×ö·¨</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11466369.htm">¡¾ÐÂÎÅ¿´µã¡¿Ñ§±±¾©ÍÏ×Ö¾÷ ÁÖÖ£Óõ¶Ô»°±Ü5ËßÇó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/21/n11468736.htm">¡¾ÐÂÎÅ¿´µã¡¿Ñî½àóø·ÃÃÀºó ÃÀ¿¹¹²ÉùÎªºÎ¸ßÕÇ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11466549.htm">ÁôÑ§Éú·¨À­Àû³µ¶ÓÏÅµ½¹úÄÚ¸¸Ä¸ ÊÓÆµ±»¼±É¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11465143.htm">ÖØÇìÉÌÈËÎ¢ÐÅ×ª·¢ÎÄÕÂ±»²¶ ÒÚÍò×Ê²ú±»Ã»ÊÕ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/20/n11466692.htm">ÖÐ¹²¿Ö¾å¶Ô»° Îá¶û¿ªÏ£ÅûÂ¶ÁùËÄ¡°Ì¸ÅÐ¡±ÄÚÄ»</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/8/22/n11470455.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/17/6/26/n9321650.md#1">ä¸­å¤®æ°”è±¡å±€æ¬¢åº†76å‘¨å¹´ å‘¨ä¸‰èµ·å¼€æ”¾å‚è§‚5æ—¥</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/5/30/n11289639.md#1">520æš´é›¨è½¦é­ç­é¡¶   24éƒ¨æŠ½æ°´æœºåœ¨ç¡è§‰?</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/6/28/n11351668.md#1">å°é£Žå­£æ¥ä¸´ æ°”è±¡å±€ï¼šä¾µå°å°é£Žé¢„ä¼°3åˆ°5ä¸ª</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/6/28/n11352469.md#1">å°ä¸­å¤®æ°”è±¡å±€:åœ£å©´å¹´å½±å“ å¼ºå°å½¢æˆæ¦‚çŽ‡é«˜</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/7/22/n11400092.md#1">æš‘å‡å°é£Žçˆ†å‘æœŸ  å°ä¸“å®¶é¢„æµ‹æœªæ¥10å¤©å¹³é™</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/7/25/n11408763.md#1">è¿ˆå…¥8æœˆä»½ å°æ°”è±¡ä¸“å®¶ï¼šå°†è¿›å…¥å°é£Žæ—ºå­£</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/7/28/n11414795.md#1">å°æ°”è±¡ä¸“å®¶ï¼šå°é£Žå¥½å‘æœŸå°†è‡³</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/8/21/n11467110.md#1">å‡†å°é£Žâ€œç™½é¹¿â€æä¾µå°ï¼Ÿ ä»Šæ˜Žä¸¤å¤©æœ€å…³é”®</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/8/21/n11467229.md#1">ä¸­åŽŸå¤§å­¦åŠ©ç´¢ç½—é—¨å»ºç½®æ°”è±¡ç³»ç»Ÿ  ç»´ç³»é‚¦äº¤å°½åŠ›</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/19/8/21/n11468202.md#1">è½»åº¦å°é£Žç™½é¹¿æ­£å¼ç”Ÿæˆ é¢„è®¡å‘¨äº”è‡³å‘¨æ—¥å½±å“å°æ¹¾</a></li>
+<hr>
+
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11859230.md#1" target="_blank">æŽæ¸…ï¼šæ­¦æ±‰è‚ºç‚Žçš„è­¦ç¤º</a></li><li><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/13/n11519967.md#1" target="_blank">ä¸­ç§‹ä½³èŠ‚è°¢å¸ˆæ© çº½çº¦åŽäººçš„å¥‡å¦™ç»åŽ†</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240778.md#1">æ—¥ç±å¥³ç”ŸæŸ“ç–« å°æ¹¾é‡‡æ£€213äººæŠ—ä½“ ç»“æžœå‡ºç‚‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239553.md#1">è´µå·žå¤§å·´21æ­» ä¼ å¸æœºæ˜¯é€€ä¼å†›äººã€æ‹†è¿æˆ·</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240842.md#1">ä¸Šæµ·æš´é›¨â€œä¸­å›½ç¬¬ä¸€é«˜æ¥¼â€å¤šå±‚æ¥¼æ¼æ°´ä¸¥é‡</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239450.md#1">FBIååœ¨ç¾ŽåŽäººï¼šå¦‚è¢«å¼ºè¿«å›žå›½ å‘ç¾Žå›½æŠ¥å‘Š</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239966.md#1">ä»»æ­£éžâ€œè¡€è…¥â€ç®¡ç†æ¨¡å¼å¼•èµ·FBIå±€é•¿æ³¨æ„</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236320.md#1">60å²æ¨è´µåªšæ™•çœ©å‘ä½œ åè½®æ¤…å°±åŒ»æ£€æŸ¥</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12241972.md#1">ä¹è§†é€€å¸‚ ä¸­å›½åŠä¸ªå¨±ä¹åœˆæ˜Žæ˜Ÿè¡€æœ¬æ— å½’</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12237076.md#1">å¼ºåˆ¶äº”ä¸ªå­©å­æˆ’â€œç½‘ç˜¾â€ ç»“æžœéœ‡æƒŠå¦ˆå¦ˆ</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/5/27/n12141489.md#1">ã€åº·ç†™å¤§å¸ã€‘è¿œèµ´æœ”æ¼  ä¸‰å¾è‘›å°”ä¸¹</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/6/n12236101.md#1">çºµæ¨ªç ´è§£ï¼šé¢„è¨€ä¸Žäººç”Ÿï¼ˆä¸‹ï¼‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/3/n12230158.md#1">ç»˜ç”»ä¸­çš„ç˜Ÿç–«â€”â€”ç½ªä¸Žç½šçš„æ•…äº‹ï¼ˆä¸€ï¼‰</a></li>
+<li><a href="https://github.com/oqudue369/djy/blob/master/gb/20/7/8/n12240967.md#1">æººæ°´æ—¶çµé­‚å‡ºçª å°å¥³å­©çœ‹è§è‡ªå·±çš„èº«ä½“</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/oqudue369/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/oqudue369/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/22/n11470455.htm">ç™½é¹¿å°é£Žå¿«è·‘ æœ€å¿«ä¸‹åˆå‘é™†è­¦</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/oqudue369/djy/blob/master/gb/19/8/22/n11470455.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/oqudue369/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/oqudue369/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/oqudue369/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/oqudue369/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
